[package]
name = "memquery"
version = "0.1.1"
authors = ["Rob Sliwa <robjsliwa@gmail.com>"]
edition = "2018"
description = "MemQuery is simple library for creating, querying, and updating in memory documents that are represented as JSON objects and queried using Mongodb like operators."
readme = "README.md"
repository = "https://github.com/robjsliwa/mem_query"
documentation = "https://docs.rs/memquery"
license = "MIT"
keywords = ["inmemory", "query", "database", "json", "nosql"]

exclude = [
    ".gitignore",
    ".editorconfig",
    "tests/**"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4", "wasm-bindgen"] }
thiserror = "1.0"
paste = "1.0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"], optional = true }

[features]
default = ["tokio"]
sync = []