[package]
name = "wsmemquery"
version = "0.1.0"
authors = ["robjsliwa <robjsliwa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
memquery = { path = "../", default-features = false, features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

